--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   },
   "dependencies": {
     "express": "^4.19.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "vercel": "^35.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
